--- a/mails/templates/mails/create.html
+++ b/mails/templates/mails/create.html
@@ -19,7 +19,7 @@
                   {% csrf_token %}
                   <div class="form-group row">
                     {{form}}
-                    <input class='btn btn-secondary btn-lg btn-block' type="submit" value='GÖNDER' >
+                    <input class='btn btn-secondary btn-sm btn-block' type="submit" value='GÖNDER' >
                   </div>
                   
                 </form>
@@ -41,7 +41,7 @@
                         </div>
                       </div>
 
-                     <input class='btn btn-secondary btn-lg btn-block' type="submit" value='GÖNDER' >
+                     <input class='btn btn-secondary btn-sm btn-block' type="submit" value='GÖNDER' >
                   </div>
                   
                 </form>
@@ -52,7 +52,7 @@
                   {% csrf_token %}
                   <div class="form-group row">
                       {{formTemplate}}
-                      <input class='btn btn-secondary btn-lg btn-block' type="submit" value='GÖNDER' >
+                      <input class='btn btn-secondary btn-sm btn-block' type="submit" value='GÖNDER' >
                   </div>
 
                 </form>
