--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -3,8 +3,8 @@
     <title>Singup</title>
 {% endblock %}
 {% block content %}
-    <div class="signp">
-        <form class="signu" action='/account/signup' method="POST">
+    <div class="signup mt-4">
+        <form class="signup_form mt-4" action='/account/signup' method="POST">
             {% csrf_token %}
             <div class="form-group">
                 {{form}}
